kubernetes/apps/pelican/pelican/app/panel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pelican-panel
spec:
  selector:
    app: pelican-panel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
