kubernetes/apps/pelican/pelican/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pelican-panel
  labels:
    app.kubernetes.io/name: pelican
    app.kubernetes.io/component: panel
spec:
  selector:
    app.kubernetes.io/name: pelican
    app.kubernetes.io/component: panel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
